# midicap

./: MANIFEST.in  README.md  pyproject.toml
midicap/: __init__.py  analyzer.py  fast_analyzer.py  midicap.py  representations.py
midicap/artwork/: README.md
